Update some layout issues.

--- a/src/sass/ui.scss
+++ b/src/sass/ui.scss
@@ -767,6 +767,10 @@ body {
       }
     }
   }
+
+  &__heading {
+    font-family: $display-font-cjk;
+  }
 }
 
 .view__found-x-items > *,
